# controller/admin_login.go
@@ -1,10 +1,15 @@
 package controller
 
 import (
-	"fmt"
+	"encoding/json"
+	"github.com/gin-gonic/contrib/sessions"
 	"github.com/gin-gonic/gin"
+	"github.com/shipinlei/go_getaway_demo/dao"
 	"github.com/shipinlei/go_getaway_demo/dto"
+	"github.com/shipinlei/go_getaway_demo/golang_common/lib"
 	"github.com/shipinlei/go_getaway_demo/middleware"
+	"github.com/shipinlei/go_getaway_demo/public"
+	"time"
 )
 
 type AdminLoginController struct{}
@@ -13,11 +18,55 @@ func AdminLoginRegister(group *gin.RouterGroup) {
 	adminLogin := &AdminLoginController{}
 	group.POST("/login", adminLogin.AdminLogin)
 }
+
+// AdminLogin godoc
+// @Summary 管理员登录
+// @Description 管理员登录
+// @Tags 管理员登录接口
+// @ID /admin_login/login
+// @Accept  json
+// @Produce  json
+// @Param body body dto.AdminLoginInput true "body"
+// @Success 200 {object} middleware.Response{data=dto.AdminLoginOutput} "success"
+// @Router /admin_login/login [post]
 func (adminlogin *AdminLoginController) AdminLogin(c *gin.Context) {
 	params := &dto.AdminLoginInput{}
 	if err := params.BindValidParam(c); err != nil {
 		middleware.ResponseError(c, 2000, err)
 		return
 	}
-	fmt.Println(params)
+
+	//1. params.UserName 取得管理员信息 admininfo
+	//2. admininfo.salt + params.Password sha256 => saltPassword
+	//3. saltPassword==admininfo.password
+	tx, err := lib.GetGormPool("default")
+	if err != nil {
+		middleware.ResponseError(c, 2001, err)
+		return
+	}
+	admin := &dao.Admin{}
+	admin, err = admin.LoginCheck(c, tx, params)
+	if err != nil {
+		middleware.ResponseError(c, 2002, err)
+		return
+	}
+
+	//设置session
+	sessInfo := &dto.AdminSessionInfo{
+		ID:        admin.Id,
+		UserName:  admin.UserName,
+		LoginTime: time.Now(),
+	}
+	sessBts, err := json.Marshal(sessInfo)
+	if err != nil {
+		middleware.ResponseError(c, 2003, err)
+		return
+	}
+	sess := sessions.Default(c)
+	sess.Set(public.AdminSessionInfoKey, string(sessBts))
+	sess.Save()
+
+	out := &dto.AdminLoginOutput{Token: admin.UserName}
+	middleware.ResponseSuccess(c, out)
+
 }
